# FileEnhancer-LegitK1ng

./: .env.example  .replit  Pasted--setup-sh-Script-I-intend-to-integrate-these-bash-and-Python-scripts-into-a-React-frontend-usi-1732482902478.txt  Pasted-Based-on-your-setup-and-uploaded-React-UI-here-s-a-plan-to-integrate-the-Bash-and-Python-backend-wi-1732483216249.txt  README.md  TempTxt2.txt  app.py  models.py  pyproject.toml  replit.nix  requirements.txt  temptxt.txt
migrations/: alembic.ini  env.py
migrations/versions/: 001_add_batch_processing_status.py  002_add_google_oauth_fields.py  003_add_password_reset_fields.py  004_add_replit_auth_fields.py
routes/: auth.py  files.py  google_auth.py  processing.py
static/css/: custom.css
static/js/: app.js  audioProcessor.js  fileManager.js
templates/: base.html  file_manager.html  forgot_password.html  index.html  login.html  register.html  reset_password.html
templates/email_templates/: password_reset.html  verify_email.html
utils/: audio_processor.py  text_processor.py
