[project]
name = "repl-nix-futureenhancer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "speechrecognition>=3.11.0",
    "pydub>=0.25.1",
    "scikit-learn>=1.5.2",
    "spacy>=3.8.2",
    "nltk>=3.9.1",
    "requests>=2.32.3",
]
